--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <h1>Esto es una página web de prueba</h1>
+    <h1>Esto es una página web de prueba para subir a github</h1>
     <p>
       Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos
       de texto.
